add comment content

--- a/comment-module/index.html
+++ b/comment-module/index.html
@@ -19,9 +19,107 @@
   <body>
     <main class="card">
       <div class="card-container">
-        <span class="text-dark">Dark</span>
-        <span class="text-dim">Dim</span>
-        <span class="bold">Bold</span>
+        <article class="comment">
+          <div class="comment-side">
+            <img src="./assets/User Avatar.png" alt="user avatar" />
+            <span><!-- vertical rule --></span>
+          </div>
+
+          <div class="comment-header">
+            <h3 class="bold">adamsdavid</h3>
+            <p class="text-dim">20 hours ago</p>
+          </div>
+
+          <p>
+            I genuinely think that Codewell's community is AMAZING. It's just
+            starting out but the templates on there are amazing. 👀
+          </p>
+
+          <div class="comment-footer">
+            <div class="vote">
+              <img src="./assets/Up.svg" alt="upvote icon" />
+              <span class="bold">2</span>
+              <img src="./assets/Down.svg" alt="downvote icon" />
+            </div>
+            <span>Reply</span>
+            <span>Report</span>
+          </div>
+
+          <article class="comment">
+            <div class="comment-side">
+              <img src="./assets/User Avatar-1.png" alt="user avatar" />
+              <span><!-- vertical rule --></span>
+            </div>
+
+            <div class="comment-header">
+              <h3 class="bold">saramay</h3>
+              <p class="text-dim">16 hours ago</p>
+            </div>
+
+            <p>
+              I agree. I'be been coding really well (pun intended) ever since I
+              started practicing on their templates hehe.
+            </p>
+
+            <div class="comment-footer">
+              <div class="vote">
+                <img src="./assets/Up.svg" alt="upvote icon" />
+                <span class="bold">5</span>
+                <img src="./assets/Down.svg" alt="downvote icon" />
+              </div>
+              <span>Reply</span>
+              <span>Report</span>
+            </div>
+
+            <article class="comment">
+              <div class="comment-side">
+                <img src="./assets/User Avatar-2.png" alt="user avatar" />
+                <span><!-- vertical rule --></span>
+              </div>
+
+              <div class="comment-header">
+                <h3 class="bold">jessica21</h3>
+                <p class="text-dim">14 hours ago</p>
+              </div>
+
+              <p>Okay, this comment wins.</p>
+
+              <div class="comment-footer">
+                <div class="vote">
+                  <img src="./assets/Up.svg" alt="upvote icon" />
+                  <span class="bold">5</span>
+                  <img src="./assets/Down.svg" alt="downvote icon" />
+                </div>
+                <span>Reply</span>
+                <span>Report</span>
+              </div>
+            </article>
+          </article>
+        </article>
+
+        <article class="comment">
+          <div class="comment-side">
+            <img src="./assets/User Avatar-3.png" alt="user avatar" />
+            <span><!-- vertical rule --></span>
+          </div>
+
+          <div class="comment-header">
+            <h3 class="bold">andrew231</h3>
+            <p class="text-dim">20 hours ago</p>
+          </div>
+
+          <p>Thanks for making this, super helpful</p>
+
+          <div class="comment-footer">
+            <div class="vote">
+              <img src="./assets/Up.svg" alt="upvote icon" />
+              <span class="bold">2</span>
+              <img src="./assets/Down.svg" alt="downvote icon" />
+            </div>
+            <span>Reply</span>
+            <span>Report</span>
+          </div>
+        </article>
       </div>
     </main>
   </body>
