add responsive navbar & animated dropdown menu

--- a/hosterr-waitlist-page/index.html
+++ b/hosterr-waitlist-page/index.html
@@ -16,5 +16,49 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Hosterr</title>
   </head>
-  <body></body>
+  <body>
+    <div class="page-container">
+      <header>
+        <div class="brand">
+          <a href="#">
+            <img src="./assets/Logo.svg" alt="Hosterr Logo" />
+          </a>
+          <a href="#Hiring">
+            <button class="btn-gradient">Hosterr is hiring!</button>
+          </a>
+        </div>
+        <nav class="nav-links">
+          <a href="#Plans">Plans</a>
+          <a href="#Find Domain">Find Domain</a>
+          <a href="#Why Hosterr">Why Hosterr</a>
+        </nav>
+        <div class="call-to-action">
+          <a href="#Sign In">Sign In</a>
+          <a href="#Join Waitlist" class="btn-accent">Join Waitlist</a>
+        </div>
+        <div id="menu-toggle">
+          <div class="hamburger">
+            =
+            <!-- icon created dynamically -->
+          </div>
+        </div>
+      </header>
+
+      <div class="dropdown-menu">
+        <nav class="nav-links">
+          <a href="#Plans">Plans</a>
+          <a href="#Find Domain">Find Domain</a>
+          <a href="#Why Hosterr">Why Hosterr</a>
+        </nav>
+        <div class="vertical-rule"></div>
+        <div class="call-to-action">
+          <a href="#Sign In">Sign In</a>
+          <a href="#Join Waitlist" class="btn-accent">Join Waitlist</a>
+        </div>
+      </div>
+
+      <main>page content</main>
+    </div>
+    <script src="./assets/script.js"></script>
+  </body>
 </html>
