add animated hamburger icon

--- a/hosterr-waitlist-page/index.html
+++ b/hosterr-waitlist-page/index.html
@@ -37,10 +37,7 @@
           <a href="#Join Waitlist" class="btn-accent">Join Waitlist</a>
         </div>
         <div id="menu-toggle">
-          <div class="hamburger">
-            =
-            <!-- icon created dynamically -->
-          </div>
+          <div class="hamburger"></div>
         </div>
       </header>
 
