add main page content

--- a/hosterr-waitlist-page/index.html
+++ b/hosterr-waitlist-page/index.html
@@ -54,7 +54,37 @@
         </div>
       </div>
 
-      <main>page content</main>
+      <main>
+        <section class="hero">
+          <!-- shapes, hero image -->
+        </section>
+
+        <section class="content">
+          <h1>Host your website in less than 5 minutes.</h1>
+          <p>
+            With Hosterr, get your website up and running in no less than 5
+            minutes with the most competitive pricing packages available online.
+          </p>
+          <div class="subscribe">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Enter e-mail address"
+            />
+            <a href="#Join Waitlist" class="btn-accent">Join Waitlist</a>
+          </div>
+          <div class="unsubscribe">
+            <img src="./assets/Checkmark.svg" alt="checkmark" />
+            <p>No spam, ever. Unsubscribe anytime.</p>
+          </div>
+        </section>
+      </main>
+
+      <footer>
+        <!-- social links -->
+        <!-- contact -->
+      </footer>
     </div>
     <script src="./assets/script.js"></script>
   </body>
