--- a/hosterr-waitlist-page/index.html
+++ b/hosterr-waitlist-page/index.html
@@ -18,39 +18,41 @@
   </head>
   <body>
     <div class="page-container">
-      <header>
-        <div class="brand">
-          <a href="#">
-            <img src="./assets/Logo.svg" alt="Hosterr Logo" />
-          </a>
-          <a href="#Hiring">
-            <button class="btn-gradient">Hosterr is hiring!</button>
-          </a>
-        </div>
-        <nav class="nav-links">
-          <a href="#Plans">Plans</a>
-          <a href="#Find Domain">Find Domain</a>
-          <a href="#Why Hosterr">Why Hosterr</a>
-        </nav>
-        <div class="call-to-action">
-          <a href="#Sign In">Sign In</a>
-          <a href="#Join Waitlist" class="btn-accent">Join Waitlist</a>
-        </div>
-        <div id="menu-toggle">
-          <div class="hamburger"></div>
-        </div>
-      </header>
+      <div>
+        <header>
+          <div class="brand">
+            <a href="#">
+              <img src="./assets/Logo.svg" alt="Hosterr Logo" />
+            </a>
+            <a href="#Hiring">
+              <button class="btn-gradient">Hosterr is hiring!</button>
+            </a>
+          </div>
+          <nav class="nav-links">
+            <a href="#Plans">Plans</a>
+            <a href="#Find Domain">Find Domain</a>
+            <a href="#Why Hosterr">Why Hosterr</a>
+          </nav>
+          <div class="call-to-action">
+            <a href="#Sign In">Sign In</a>
+            <a href="#Join Waitlist" class="btn-accent">Join Waitlist</a>
+          </div>
+          <div id="menu-toggle">
+            <div class="hamburger"></div>
+          </div>
+        </header>
 
-      <div class="dropdown-menu">
-        <nav class="nav-links">
-          <a href="#Plans">Plans</a>
-          <a href="#Find Domain">Find Domain</a>
-          <a href="#Why Hosterr">Why Hosterr</a>
-        </nav>
-        <div class="vertical-rule"></div>
-        <div class="call-to-action">
-          <a href="#Sign In">Sign In</a>
-          <a href="#Join Waitlist" class="btn-accent">Join Waitlist</a>
+        <div class="dropdown-menu">
+          <nav class="nav-links">
+            <a href="#Plans">Plans</a>
+            <a href="#Find Domain">Find Domain</a>
+            <a href="#Why Hosterr">Why Hosterr</a>
+          </nav>
+          <div class="vertical-rule"></div>
+          <div class="call-to-action">
+            <a href="#Sign In">Sign In</a>
+            <a href="#Join Waitlist" class="btn-accent">Join Waitlist</a>
+          </div>
         </div>
       </div>
 
@@ -82,8 +84,18 @@
       </main>
 
       <footer>
-        <!-- social links -->
-        <!-- contact -->
+        <div class="social-links">
+          <a href="#Facebook">Facebook</a>
+          <a href="#Instagram">Instagram</a>
+          <a href="#Twitter">Twitter</a>
+        </div>
+        <div class="contact">
+          <img src="./assets/Help Avatar.svg" alt="face" />
+          <div class="contact-text">
+            <p>Have any questions?</p>
+            <a href="#Contact">Talk to a specialist</a>
+          </div>
+        </div>
       </footer>
     </div>
     <script src="./assets/script.js"></script>
