add hero section

--- a/hosterr-waitlist-page/index.html
+++ b/hosterr-waitlist-page/index.html
@@ -58,7 +58,14 @@
 
       <main>
         <section class="hero">
-          <!-- shapes, hero image -->
+          <div class="container">
+            <div class="shapes">
+              <img src="./assets/Blue Shape.svg" alt="blue shape" />
+              <img src="./assets/Pink Shape.svg" alt="pink shape" />
+              <img src="./assets/Purple Shape.svg" alt="purple shape" />
+            </div>
+            <img src="./assets/Hero Image (Model).png" alt="model face" />
+          </div>
         </section>
 
         <section class="content">
